GPC/tests/examples/pass/ifstmt.gpc
GPRM::Kernel::Test m;

int ifstmt(int i) {
    if (i > 5) {
        return 3;
    }

    if (3 < 5) {
        m.m1();
    } else {
        m.m3();
    }

    if (3 < 5) {
        m.m2();
    }

    return 0;
}
