GPC/tests/examples/fail/errArith4.gpc

void errArith4() {
    return 3 > 3.0;
}

